- Added pagination in reviews and message - Added Toast messages to role and auth guards

--- a/ClientApp/src/app/components/mailbox/mailbox.component.html
+++ b/ClientApp/src/app/components/mailbox/mailbox.component.html
@@ -5,13 +5,21 @@
 
     <div *ngIf="dropdownOpen" class="dropdown">
         <mat-list>
-            <mat-list-item *ngFor="let message of messages">
+            <mat-list-item *ngFor="let message of messagesPage?.data">
                 <div class="message-container">
                     <p class="message-text">{{ message.content }}</p>
-                    <button *ngIf="message.action" class="message-button primary" (click)="handleAction(message.action, message.actionId)">View</button>
+                    <button *ngIf="message.action" class="message-button primary" (click)="handleAction(message.action)">View</button>
                 </div>
             </mat-list-item>
         </mat-list>
-        <button *ngIf="messages.length > 0" mat-button (click)="onShowMore()">Show More</button>
+        <div class="pagination">
+            <mat-paginator
+            [length]="messagesPage?.totalCount || 0"
+            [pageSize]="messagesPage?.pageSize || 5"
+            [pageIndex]="(messagesPage?.pageNumber ?? 1) - 1"
+            [pageSizeOptions]="[5, 10]"
+            (page)="onPageChange($event)">
+            </mat-paginator>
+        </div>
     </div>
 </div>
