UI Revamp Part 1

--- a/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.scss
+++ b/ClientApp/src/app/components/config-item-not-found/config-item-not-found.component.scss
@@ -3,6 +3,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full page height */
+    height: 100%; /* Full page height */
     text-align: center;
 }
