--- a/ClientApp/src/app/components/config-navbar/config-navbar.component.scss
+++ b/ClientApp/src/app/components/config-navbar/config-navbar.component.scss
@@ -2,14 +2,15 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    padding: 0 10px;
+    padding: 5px 16px;
 }
 
 .config-header-content > ul {
     display: flex;
-    flex-direction: row;
-    gap: 16px;
-    list-style-type: none;
+    gap: 12px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .btn-save {
