--- a/ClientApp/src/app/components/location-search/location-search.component.html
+++ b/ClientApp/src/app/components/location-search/location-search.component.html
@@ -1,4 +1,5 @@
-<mat-form-field appearance="outline">
+
+<mat-form-field appearance="fill">
     <mat-label>Location</mat-label>
     <mat-icon matPrefix>location_on</mat-icon>
     <input #search matInput placeholder="Anywhere" [(ngModel)]="locationInput" >
