--- a/ClientApp/src/app/components/card/card.component.scss
+++ b/ClientApp/src/app/components/card/card.component.scss
@@ -1,9 +1,8 @@
 .container {
     background: #ffffff;
-    padding: 20px;
+    padding: 12px 16px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    max-width: 600px;
 }
 
 /* No Content Message */
@@ -23,17 +22,11 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 15px 0;
         border-bottom: 1px solid #ddd;
+        padding: 10px 0;
     }
     
     .item:last-child {
         border-bottom: none;
-    }
-
-    .btn-label {
-        @media (max-width: 1500px) {
-            display: none;
-        }
     }
 }
