--- a/ClientApp/src/app/components/config/heading-large/heading-large.component.scss
+++ b/ClientApp/src/app/components/config/heading-large/heading-large.component.scss
@@ -1,9 +1,4 @@
-.container {
-    display: block;
-    margin-top: 16px;
-    margin-bottom: 16px;
-    
-    .label {
-        margin-right: 5px;
-    }
-}
+h1 {
+    font-size: 50px;
+  }
+  
