--- a/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
+++ b/ClientApp/src/app/components/config/heading-medium/heading-medium.component.html
@@ -1,10 +1,5 @@
 @if(editMode) {
-    <div class="container">
-        <mat-form-field appearance="outline">
-            <mat-label *ngIf="label">{{ label }}</mat-label>
-            <input matInput type="text" [(ngModel)]="content" (ngModelChange)="onContentChange($event)">
-        </mat-form-field>
-    </div>
+    <app-input [(content)]="content" label="Name"></app-input>
 }@else {
     <h3>{{ content }}</h3>
 }
