--- a/ClientApp/src/app/components/item-events/item-events.component.html
+++ b/ClientApp/src/app/components/item-events/item-events.component.html
@@ -1,36 +1,40 @@
-<app-card [isEmpty]="events.length === 0">
-    <div *ngFor="let event of events" class="item">
-        <!-- Event Date -->
-        <div class="event-date">
-            <p class="date">{{ event.startDate | date:'d' }}</p>
-            <p class="month">{{ event.startDate | date:'MMM' }}</p>
+<div class="container">
+    <app-card [isEmpty]="events.length === 0">
+        <div *ngFor="let event of events" class="item">
+            <!-- Event Date -->
+            <div class="date-container">
+                <p class="date">{{ event.startDate | date:'d' }}</p>
+                <p class="month">{{ event.startDate | date:'MMM' }}</p>
+            </div>
+    
+            <!-- Event Details -->
+            <div class="info">
+                <h3 class="name">{{ event.name }}</h3>
+    
+                <div class="nested-info">
+                    <p class="icon-text time">
+                      <mat-icon>access_time</mat-icon>
+                      {{ event.startDate | date:'h:mm a' }} - {{ event.endDate | date:'h:mm a' }}
+                    </p>
+                  
+                    <p class="icon-text">
+                      <mat-icon>payments</mat-icon>
+                      {{ event.price | currency: 'GBP':'symbol':'1.2-2' }}
+                    </p>
+                </div>              
+            </div>
+    
+            <div class="actions">
+                <button class="primary" (click)="onViewDetails(event)">
+                    <mat-icon>visibility</mat-icon>
+                    <span class="btn-label">View Details</span>
+                </button>
+    
+                <button *ngIf="authService.isRole('Customer')" class="primary" (click)="onPurchase(event)">
+                    <mat-icon>shopping_cart</mat-icon>
+                    <span class="btn-label">Purchase</span>
+                </button>
+            </div>
         </div>
-
-        <!-- Event Details -->
-        <div class="event-info">
-            <h3 class="event-name">{{ event.name }}</h3>
-
-            <p class="event-time">
-                <mat-icon>access_time</mat-icon>
-                {{ event.startDate | date:'h:mm a' }} - {{ event.endDate | date:'h:mm a' }}
-            </p>
-
-            <p class="icon-text">
-                <mat-icon>attach_money</mat-icon>
-                <strong style="margin-right: 3px;">Price:</strong> {{ event.price | currency: 'GBP':'symbol':'1.2-2' }}
-            </p>
-        </div>
-
-        <div class="event-actions">
-            <button class="primary" (click)="onViewDetails(event)">
-                <mat-icon>visibility</mat-icon>
-                <span class="btn-label">View Details</span>
-            </button>
-
-            <button *ngIf="authService.isRole('Customer')" class="primary" (click)="onPurchase(event)">
-                <mat-icon>shopping_cart</mat-icon>
-                <span class="btn-label">Purchase</span>
-            </button>
-        </div>
-    </div>
-</app-card>
+    </app-card>
+</div>
