--- a/ClientApp/src/app/components/profile-details/profile-details.component.html
+++ b/ClientApp/src/app/components/profile-details/profile-details.component.html
@@ -1,10 +1,10 @@
 <app-text [content]="'Hello'"></app-text>
-<app-location
+<app-location-display
     *ngIf="user"
     [editMode]="editMode"
     [latitude]="user.latitude"
     [longitude]="user.longitude"
     [county]="user.county"
     [town]="user.town"
-    (coordinatesChange)="updateCoordinates($event)">
-</app-location>
+    (latLongChange)="updateLatLong($event)">
+</app-location-display>
