--- a/ClientApp/src/app/components/search/search.component.html
+++ b/ClientApp/src/app/components/search/search.component.html
@@ -1,11 +1,12 @@
-<div class="container">
+
+  <div class="container">
     <div class="wrapper">
       <!-- Location Search Component -->
       <app-location-search 
         class="location-search" 
         [longitude]="searchParams.longitude"
         [latitude]="searchParams.latitude"
-        (locationChange)="onLocationChange($event)">
+        (latLongChange)="onLatLongChange($event)">
       </app-location-search>
   
       <!-- Search Input Field -->
@@ -32,4 +33,3 @@
       </button>
     </div>
   </div>
-  
