--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     max-width: 1200px;     /* or whatever width you prefer */
     margin: 0 auto;        /* centers the wrapper horizontally */
-    height: 100vh;
+    height: 100%;
   }
   
   .main-content {
