--- a/ClientApp/src/app/pages/venue-details/venue-details.component.html
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.html
@@ -1,31 +1,33 @@
 @if(venue) {
+    <app-venue-details-hero 
+        [venue]="venue" 
+        [editMode]="editMode" 
+        (contentChange)="onChangeDetected()"
+        (latLongChange)="updateLatLong($event)"
+        />
     <app-scrollspy [navItems]="navItems"></app-scrollspy>
         <div class="container" *ngIf="entity">
             <section [id]="navItems[0].fragment">
                 <h1>{{navItems[0].name}}</h1>
-                <app-heading-medium [editMode]="editMode" label="Name" [(content)]="venue.name" (contentChange)="onChangeDetected()"/>
                 <div class="wrapper">
                     <app-textarea [editMode]="editMode" label="About" [(content)]="venue.about" (contentChange)="onChangeDetected()"/>
-                    <app-image 
-                        [editMode]="editMode" 
-                        [src]="venue.imageUrl" 
-                        width="512"
-                        height="512"
-                        alt="Venue Image" 
-                        (imageChange)="updateImage($event)"/>
+                    <mat-divider vertical></mat-divider>
+                    <app-badges
+                        [items]="selectedItems"
+                        [displayProperty]="'name'">
+                    </app-badges>
                 </div>
             </section>
             <mat-divider class="light" />
             <section [id]="navItems[1].fragment">
                 <h1>{{navItems[1].name}}</h1>
-                <app-location
-                    [editMode]="editMode"
-                    [latitude]="venue.latitude"
-                    [longitude]="venue.longitude"
-                    [county]="venue.county"
-                    [town]="venue.town"
-                    (coordinatesChange)="updateCoordinates($event)">
-                </app-location>
+                <div class="wrapper">
+                    <app-google-maps [editMode]="editMode" [lat]="venue.latitude" [lng]="venue.longitude" (latLongChange)="updateLatLong($event)" />
+                    <div>
+                        <app-address [lat]="venue.latitude" [lng]="venue.longitude" />
+                        <button class="secondary mt-10">View in Maps</button>
+                    </div>
+                </div>
             </section>
             <mat-divider class="light" />
             @if (venue.about) {
