--- a/ClientApp/src/app/pages/venue-details/venue-details.component.scss
+++ b/ClientApp/src/app/pages/venue-details/venue-details.component.scss
@@ -17,5 +17,9 @@ input, textarea {
     align-items: flex-start; /* Aligns items at the top */
     gap: 20px; /* Adds spacing between textarea and image */
     margin-top: 16px;
-    width: 100%
+}
+
+mat-divider[vertical] {
+    align-self: stretch;
+
 }
