--- a/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
+++ b/ClientApp/src/app/shared/layouts/dashboard-layout/dashboard-layout.component.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
     padding: 16px;
-    height: 100vh;
+    height: 100%;
 
     > ::ng-deep [section-one],
     ::ng-deep [section-two],
