--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -17,13 +17,13 @@
 
 :root {
     /* 🎨 Core Colors */
-    --primary-color: #3b5998; /* Navbar, Headers */
-    --secondary-color: #4A90E2; /* Main CTA Buttons (Save, Apply) */
+    --primary-color: #1e2a78; /* Navbar, Headers */
+    --secondary-color: #4169E1; /* Main CTA Buttons (Save, Apply) */
     --tertiary-color: #D6E4FF; /* Soft Blue (Edit Button) */
 
     /* ✨ Hover Colors */
     --primary-hover: #334d84;     /* Slightly darker than primary */
-    --secondary-hover: #357ABD;   /* Richer blue for CTA hover */
+    --secondary-hover: #3558c7;   /* Richer blue for CTA hover */
     --tertiary-hover: #c2d9ff;    /* Slightly deeper for soft hover */
 
     /* 🎨 Supporting Colors */
@@ -51,7 +51,7 @@
 
 /* Apply global styles */
 html, body {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
@@ -66,6 +66,7 @@ body {
   
     mat-icon {
       font-size: 20px;
+      margin-right: 2px;
     }
   }
   
@@ -88,18 +89,33 @@ body {
   }
   
 
-button.primary {
+  button.primary,
+  button.secondary {
     padding: 8px 16px;
-    background-color: var(--secondary-color);
-    color: white;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
-
+    transition: background-color 0.2s ease, color 0.2s ease;
+  }
+  
+  button.primary {
+    background-color: var(--button-primary);
+    color: white;
+  
     &:hover {
-        background-color: var(--secondary-hover);
+      background-color: var(--secondary-hover);
     }
-}
+  }
+  
+  button.secondary {
+    background-color: var(--button-secondary);
+    color: black;
+  
+    &:hover {
+      background-color: var(--tertiary-hover);
+    }
+  }
+  
 
 button.delete {
     padding: 8px 16px;
@@ -134,9 +150,12 @@ mat-icon.star {
 
 mat-divider.light {
     margin-top:20px;
-    border-top-color: #e8e4e4;
+    border-top-color: #bcbcbc;
 }
 
+mat-divider[vertical].light {
+    border-right-color: #bcbcbc;
+}
 
 /* Material Theme Override */
 :root {
