UI Revamp Part 2

--- a/ClientApp/src/app/components/breadcrumb/breadcrumb.component.scss
+++ b/ClientApp/src/app/components/breadcrumb/breadcrumb.component.scss
@@ -1,7 +1,7 @@
 .container {
     background-color: var(--primary-color);
     color: white;
-    padding: 5px;
+    padding: 5px 20px;
 
     a {
         color: white;
