--- a/ClientApp/src/app/pages/event-details/event-details.component.scss
+++ b/ClientApp/src/app/pages/event-details/event-details.component.scss
@@ -19,7 +19,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     padding: 20px;
 
-    ::ng-deep app-image > img {
+    :host ::ng-deep app-image > img {
         width:100%;
         height:auto;
     }
