--- a/ClientApp/src/app/components/card/card.component.scss
+++ b/ClientApp/src/app/components/card/card.component.scss
@@ -17,7 +17,7 @@
     padding: 10px 0;
 }
 
-::ng-deep {
+:host ::ng-deep {
     .item {
         display: flex;
         justify-content: space-between;
